cluster/apps/media/radarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/ssl-redirect: 'false'
    traefik.ingress.kubernetes.io/auth-secret: basic-auth
    traefik.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    traefik.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.k3s.ravenholm.io
      http:
        paths:
          - path: /
            pathType: Prefix
            service:
              name: radarr
              port:
                number: 80
  tls:
    - secretName: radarr-certificate-secret
